--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /src/packages
 /src/Project/Training/code/obj/Debug
 /src/Foundation/ORM/code/bin
+/src/Foundation/ORM/code/obj/Release
+/src/Foundation/Serialization/code/bin
+/src/Foundation/Serialization/code/obj/Release
+/src/Project/Training/code/bin
+/src/Project/Training/code/obj/Release
