--- a/src/Project/Training/code/Sitecore.Project.Training.csproj
+++ b/src/Project/Training/code/Sitecore.Project.Training.csproj
@@ -88,7 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\PublishProfiles\Publish.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
