--- a/src/Foundation/Serialization/code/Sitecore.Foundation.Serialization.csproj
+++ b/src/Foundation/Serialization/code/Sitecore.Foundation.Serialization.csproj
@@ -118,6 +118,7 @@
     <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.Default.example" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
+    <Content Include="App_Config\Include\Foundation\Sitecore.Foundation.Serialization.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
