--- a/src/Project/Training/code/Sitecore.Project.Training.csproj
+++ b/src/Project/Training/code/Sitecore.Project.Training.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Config\Include\z.Training.DevSettings.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
