--- a/src/Foundation/ORM/code/Sitecore.Foundation.ORM.csproj
+++ b/src/Foundation/ORM/code/Sitecore.Foundation.ORM.csproj
@@ -91,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Config\Include\z.Foundation\Sitecore.Foundation.ORM.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
@@ -101,7 +102,6 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="App_Config\Include\Synthesis\Synthesis.Startup.config" />
-    <None Include="App_Config\Include\Synthesis\Synthesis.LocalConfig.config" />
     <Content Include="App_Config\Include\Synthesis\Synthesis.ControlPanel.config" />
     <Content Include="App_Config\Include\Synthesis\Synthesis.config" />
     <Content Include="App_Config\Include\Synthesis\Synthesis.AutoRegenerate.config" />
